# soc_2026_Industrial_Quality_Assurance

./: .gitignore  main.py  pandas_tutorial.ipynb  pyproject.toml  streamlit_tutorial.py  week1_python.ipynb  week2_ml.ipynb  week3_deeplearning.ipynb
steel-qa-system/: app.py  detector.py  main.py  pyproject.toml  report_generator.py
