[project]
name = "steel-qa-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.6.2",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "ultralytics>=8.4.96",
]
